Created adaptive rules for hotel section

--- a/2_hotel-booking/blocks/hotel-info/booking/booking.pug
+++ b/2_hotel-booking/blocks/hotel-info/booking/booking.pug
@@ -1,6 +1,6 @@
 include ./config.pug
 
-.booking
+.booking.hotel-info__booking
     .booking__container
         .booking__info
             .booking__price
