--- a/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
+++ b/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
@@ -55,21 +55,29 @@
         justify-content: space-between;
     }
 
+    &__swiper {
+        flex-grow: 1;
+        margin-right: 30px;
+    }
+
     &__right-wrap {
-        flex-basis: calc(350/1105*100%);
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
     }
 
+    &__booking {
+        margin-bottom: 27px;
+        width: 100%;
+    }
+
     &__map {
         width: 100%;
-        height: 213px;
+        min-height: 0;
+        flex-grow: 1;
         border-radius: 10px;
+        overflow: hidden;
     }
-}
-
-.swiper {
-    flex-basis: calc(728/1105*100%);
 }
