--- a/2_hotel-booking/blocks/hotel-info/booking/_booking.scss
+++ b/2_hotel-booking/blocks/hotel-info/booking/_booking.scss
@@ -6,9 +6,11 @@
     background-color: $dark;
     color: $light;
     border-radius: 8px;
+    width: 100%;
+    min-width: 279px;
 
     &__container {
-        @include adaptive-width(295px);
+        width: calc(295/350*100%);
         margin: 29px 29px 26px 26px;
     }
 
