Fixed media rules for hotel section

--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -1755,6 +1755,8 @@ button.swiper-pagination-bullet {
       -ms-flex-positive: 1;
           flex-grow: 1;
   margin-right: 30px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .hotel-info__right-wrap {
