Created subscribe section

--- a/2_hotel-booking/blocks/search/search.pug
+++ b/2_hotel-booking/blocks/search/search.pug
@@ -1,6 +1,4 @@
-block variables
-
-form.search(action="#", class=element)
+form.search.navbar__search(action="#")
 
     input.search__input(type="text", placeholder="Search Location")
     
