--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -10,3 +10,4 @@ html(lang="en")
         include ./blocks/header/header.pug
         include ./blocks/breadcrumb/breadcrumb.pug
         include ./blocks/hotel-info/hotel-info.pug
+        include ./blocks/subscribe/subscribe.pug
