--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -1791,6 +1791,104 @@ button.swiper-pagination-bullet {
   overflow: hidden;
 }
 
+.subscribe {
+  position: relative;
+  background-image: url(/2_hotel-booking/blocks/subscribe/subscribe__img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.subscribe::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(10, 34, 61, 0.8);
+  width: 100%;
+  height: 100%;
+}
+
+.subscribe__wrap {
+  position: relative;
+  max-width: 731px;
+  padding: 98px 0 87px 0;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.subscribe__title {
+  font-family: "Mulish", serif;
+  font-size: 24px;
+  font-weight: 300;
+  color: #FFFFFF;
+  line-height: 30px;
+  margin: 0;
+}
+
+.subscribe__strong {
+  font-family: "Mulish", serif;
+  font-size: 36px;
+  font-weight: 600;
+  color: #FFFFFF;
+  line-height: 36px;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+.subscribe__form {
+  width: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  border-radius: 6px;
+}
+
+.subscribe__input {
+  width: 285px;
+  height: 40px;
+  border: none;
+  background-color: #F5FAFE;
+  padding-left: 1.59722vw;
+  padding-right: 1.59722vw;
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #333333;
+  line-height: 15.06px;
+}
+
+.subscribe__button {
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 15px;
+  width: 65px;
+  height: 40px;
+  border: none;
+  background-color: #EC1F46;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 @media (max-width: 1245px) {
   .hotel-info__grid {
     -ms-flex-wrap: wrap;
