Finished subscribe section

--- a/2_hotel-booking/blocks/subscribe/subscribe.pug
+++ b/2_hotel-booking/blocks/subscribe/subscribe.pug
@@ -1,4 +1,4 @@
-section.subscribe
+section.subscribe.content__subscribe
     .container
         .subscribe__wrap
             h2.subscribe__title subscribe to our
