--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -19,6 +19,10 @@
 //Подключение стилей информации об отеле
 @import "../blocks/hotel-info/hotel-info";
 
+.hotel-info {
+    margin-bottom: 70px;
+}
+
 //Подключение стилей подписки
 @import "../blocks/subscribe/subscribe";
 
