--- a/2_hotel-booking/blocks/subscribe/_subscribe.scss
+++ b/2_hotel-booking/blocks/subscribe/_subscribe.scss
@@ -18,6 +18,7 @@
         position: relative;
         max-width: 731px;
         padding: 98px 0 87px 0;
+        min-height: 260px;
         margin: auto;
         display: flex;
         justify-content: space-between;
@@ -37,15 +38,16 @@
     }
 
     &__form {
-        width: 350px;;
+        width: 350px;
         display: flex;
+        justify-content: center;
         overflow: hidden;
         border-radius: 6px;
     }
 
     &__input {
         width: 285px;
-        height: 40px;
+        min-height: 40px;
         border: none;
         background-color: $blue;
         padding-left: (23px / 1440px) * 100vw;
@@ -55,11 +57,11 @@
     
     &__button {
         @include font-mulish(12px, 700, $light, 15px);
-        width: 65px;
-        height: 40px;
+        min-width: 65px;
+        min-height: 40px;
         border: none;
         background-color: $red;
-        padding: 0;
+        padding: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
