Created reveiws section

--- a/2_hotel-booking/blocks/hotel-info/slider/slider.pug
+++ b/2_hotel-booking/blocks/hotel-info/slider/slider.pug
@@ -10,5 +10,5 @@ include ./config.pug
     button.swiper__btn.swiper-button-next
 
 script(src="/2_hotel-booking/blocks/hotel-info/slider/js/swiper-bundle.min.js")
-script(src="/2_hotel-booking/blocks/hotel-info/slider/js/swiper-bundle.min.js")
+script(src="/2_hotel-booking/blocks/hotel-info/slider/js/swiper-bundle.min.js.map")
 script(src="/2_hotel-booking/blocks/hotel-info/slider/js/main.js")
