--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -26,5 +26,8 @@
 //Подключение стилей подписки
 @import "../blocks/subscribe/subscribe";
 
+//Подключение стилей отзывов
+@import "../blocks/reviews/reviews";
+
 //Подключение стилей для адаптива
 @import "./media";
