--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -11,3 +11,4 @@ html(lang="en")
         include ./blocks/breadcrumb/breadcrumb.pug
         include ./blocks/hotel-info/hotel-info.pug
         include ./blocks/subscribe/subscribe.pug
+        include ./blocks/reviews/reviews.pug
