Worked on the reviews section

--- a/2_hotel-booking/blocks/hotel-info/slider/slider.pug
+++ b/2_hotel-booking/blocks/hotel-info/slider/slider.pug
@@ -3,7 +3,7 @@ include ./config.pug
 .swiper.hotel-info__swiper
     .swiper-wrapper
         for i in hotelPhotos
-            .swiper-slide
+            .swiper-slide.hotel-info__slider-item
                 img(src=i alt="Slider").hotel-info__swiper-img
 
     button.swiper__btn.swiper-button-prev
