--- a/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
+++ b/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
@@ -61,6 +61,24 @@
         flex-shrink: 0;
     }
 
+    &__slider-item {
+        position: relative;
+        z-index: 1;
+    
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+            z-index: 2;
+        }
+    }
+
     &__right-wrap {
         width: 100%;
         display: flex;
