--- a/2_hotel-booking/blocks/reviews/reviews.pug
+++ b/2_hotel-booking/blocks/reviews/reviews.pug
@@ -1,5 +1,6 @@
 include ./config.pug
 
 section.reviews
-    h2.reviews__title What people think about us
-    include ./slider/slider.pug
+    .container
+        h2.reviews__title What people think about us
+        include ./slider/slider.pug
