--- a/2_hotel-booking/blocks/reviews/slider/config.pug
+++ b/2_hotel-booking/blocks/reviews/slider/config.pug
@@ -1,2 +1,12 @@
-- var path = "/2_hotel-booking/blocks/reviews/slider/img/"
-- var hotelPhotos = [path+"slide1.jpg", path+"slide1.jpg", path+"slide1.jpg"]
+- var path = "/2_hotel-booking/blocks/reviews/slider/img/" 
+
+- 
+    const reviews = [
+        {
+            reviewAvatar: path+"review-photo1.jpg",
+            name: "Megan Fox",
+            stayed: "Stayed 18 Nov, 2019",
+            stars: 5,
+            review: "It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.",
+        },
+    ]
