--- a/2_hotel-booking/blocks/reviews/_reviews.scss
+++ b/2_hotel-booking/blocks/reviews/_reviews.scss
@@ -1,10 +1,69 @@
+$path: "/2_hotel-booking/blocks/reviews/slider/img/";
+
 // Подключение стилей слайдера
 @import "./slider/css/slider";
 
 .reviews {
+
     &__title {
         @include font-mulish(36px, 700, $font-grey, 45px);
         text-transform: uppercase;
+        text-align: center;
+        margin: 0 0 70px 0;
+    }
+
+    &__swiper {
+        width: 100%;
+        max-width: none;
+    }
+
+    &__slider-item {
+        position: relative;
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 730px;
+        margin: 45px auto 0;
+        border-radius: 8px;
+
+        &::before {
+            content: '';
+            background-image: url("/2_hotel-booking/blocks/reviews/slider/img/qoute-left.svg");
+            background-repeat: no-repeat;
+            position: absolute;
+            top: 12.8px;
+            left: 64px;
+            width: 70px;
+            height: 47px;
+        }
+
+        &::after {
+            content: '';
+            background-image: url("/2_hotel-booking/blocks/reviews/slider/img/qoute-right.svg");
+            background-repeat: no-repeat;
+            position: absolute;
+            bottom: 113.71px;
+            right: 60px;
+            width: 70px;
+            height: 47px;
+        }
+    }
+
+    &__btn-prev {
+        background-image: url("/2_hotel-booking/blocks/reviews/slider/img/button-prev-2.svg");
+    }
+
+    &__btn-next {
+        background-image: url("/2_hotel-booking/blocks/reviews/slider/img/button-next-2.svg");
+    }
+
+    &__profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 32px;
+        margin-top: -45px;
     }
 
     &__avatar {
@@ -12,23 +71,33 @@
         height: 90px;
         border-radius: 50%;
         object-fit: cover;
+        margin-bottom: 9px;
     }
 
     &__name {
         @include font-mulish(12px, 700, $red, 15px);
+        margin-bottom: 10px;
     }
 
     &__stayed {
         @include font-mulish(10px, 400, $font-grey, 12.5px);
+        margin-bottom: 4px;
     }
 
     &__stars {
-        height: 6px;
-        flex-basis: 100%;
+        align-self: center;
         display: flex;
+    }
+
+    &__star {
+        width: 6px;
     }
 
     &__review {
         @include font-mulish(12px, 400, $font-grey, 19px);
+        max-width: 537px;
+        margin-bottom: 30px;
+        padding: 0 31px;
+        text-align: justify;
     }
 }
