Added media rules for reviews section

--- a/2_hotel-booking/blocks/reviews/_reviews.scss
+++ b/2_hotel-booking/blocks/reviews/_reviews.scss
@@ -52,10 +52,12 @@ $path: "/2_hotel-booking/blocks/reviews/slider/img/";
 
     &__btn-prev {
         background-image: url("/2_hotel-booking/blocks/reviews/slider/img/button-prev-2.svg");
+        margin: 0;
     }
 
     &__btn-next {
         background-image: url("/2_hotel-booking/blocks/reviews/slider/img/button-next-2.svg");
+        margin: 0;
     }
 
     &__profile {
