--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -63,6 +63,29 @@
     }
 }
 
+@media (max-width: 1100px) {
+    .container {
+        width: 700/768*100%;
+    }
+}
+
+@media (max-width: 992px) {
+    .reviews {
+        &__title {
+            font-size: 25px;
+            margin-bottom: 50px;
+        }
+
+        &__slider-item {
+            max-width: 580px;
+
+            &::before, &::after {
+                display: none;
+            }
+        }
+    }
+}
+
 @media (max-width: 870px) {
     .navbar {
         &-menu {
@@ -70,12 +93,6 @@
                 font-size: 13px;
             }
         }
-    }
-}
-
-@media (max-width: 1000px) {
-    .container {
-        width: 700/768*100%;
     }
 }
 
@@ -197,6 +214,27 @@
             width: 100%;
         }
     }
+
+    .reviews {
+        &__title {
+            font-size: 30px;
+            margin-bottom: 42px;
+        }
+
+        &__btn-prev {
+            top: 30px;
+            left: 50%;
+            transform: translate(-50%, 0);
+            margin-left: -65px;
+        }
+    
+        &__btn-next {
+            top: 30px;
+            right: 50%;
+            transform: translate(50%, 0);
+            margin-right: -65px;
+        }
+    }
 }
 
 @media(max-width: 660px) {
@@ -224,6 +262,13 @@
     .navbar {
         &__logo-img {
             width: 99px;
+        }
+    }
+
+    .reviews {
+        &__title {
+            font-size: 22px;
+            line-height: 22px;
         }
     }
 }
