--- a/2_hotel-booking/blocks/reviews/_reviews.scss
+++ b/2_hotel-booking/blocks/reviews/_reviews.scss
@@ -98,8 +98,10 @@ $path: "/2_hotel-booking/blocks/reviews/slider/img/";
     &__review {
         @include font-mulish(12px, 400, $font-grey, 19px);
         max-width: 537px;
-        margin-bottom: 30px;
+        margin: 0 0 30px 0;
         padding: 0 31px;
+        max-height: 129px;
         text-align: justify;
+        overflow: scroll;
     }
 }
