--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -2862,9 +2862,11 @@ button.swiper-pagination-bullet {
   color: #333333;
   line-height: 19px;
   max-width: 537px;
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
   padding: 0 31px;
+  max-height: 129px;
   text-align: justify;
+  overflow: scroll;
 }
 
 .reviews {
