--- a/2_hotel-booking/blocks/subscribe/subscribe.pug
+++ b/2_hotel-booking/blocks/subscribe/subscribe.pug
@@ -1,3 +1,5 @@
+script(src="/2_hotel-booking/blocks/subscribe/subscribe.js")
+
 section.subscribe.content__subscribe
     .container
         .subscribe__wrap
