--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/2_hotel-booking/css/style.css")
+        script(src="/2_hotel-booking/js/jquery-3.6.0.min.js")
         title Best Tour Plan - Hotel Booking
     body
         include ./blocks/header/header.pug
