--- a/2_hotel-booking/blocks/subscribe/_subscribe.scss
+++ b/2_hotel-booking/blocks/subscribe/_subscribe.scss
@@ -1,6 +1,7 @@
 .subscribe {
     position: relative;
-    background-image: url(/2_hotel-booking/blocks/subscribe/subscribe__img.jpg);
+    //background-image: url(/2_hotel-booking/blocks/subscribe/subscribe__img.jpg);
+    background-position-y: 40%;
     background-repeat: no-repeat;
     background-size: cover;
 
