--- a/2_hotel-booking/blocks/subscribe/subscribe.pug
+++ b/2_hotel-booking/blocks/subscribe/subscribe.pug
@@ -1,5 +1,3 @@
-script(src="/2_hotel-booking/blocks/subscribe/subscribe.js")
-
 section.subscribe.content__subscribe
     .container
         .subscribe__wrap
@@ -9,3 +7,7 @@ section.subscribe.content__subscribe
             form.subscribe__form(action="#")
                 input.subscribe__input(type="text", placeholder="Your email address")
                 button.subscribe__button Send
+
+script(src="/2_hotel-booking/js/jquery-3.6.0.min.js")
+script(src="/2_hotel-booking/blocks/subscribe/js/parallax.min.js")
+script(src="/2_hotel-booking/blocks/subscribe/js/main.js")
