--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -13,3 +13,4 @@ html(lang="en")
         include ./blocks/hotel-info/hotel-info.pug
         include ./blocks/subscribe/subscribe.pug
         include ./blocks/reviews/reviews.pug
+        include ./blocks/activities/activities.pug
