--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -1799,7 +1799,7 @@ button.swiper-pagination-bullet {
 
 .subscribe {
   position: relative;
-  background-image: url(/2_hotel-booking/blocks/subscribe/subscribe__img.jpg);
+  background-position-y: 40%;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -2871,6 +2871,63 @@ button.swiper-pagination-bullet {
 
 .reviews {
   margin-bottom: 70px;
+}
+
+.activities {
+  padding: 60px 0 98px 0;
+}
+
+.activities__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.activities__card {
+  position: relative;
+  height: 255px;
+  max-width: 255px;
+}
+
+.activities__card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
+  width: 100%;
+  height: 100%;
+}
+
+.activities__img {
+  height: 100%;
+  max-width: 100%;
+  border-radius: 6px;
+}
+
+.activities__description {
+  font-family: "Mulish", serif;
+  font-size: 16px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 20px;
+  max-width: 200px;
+  margin: 0;
+  padding: 0 0 18px 26px;
+}
+
+.activities__btn {
+  position: absolute;
+  bottom: 24px;
+  left: 26px;
+  background-color: #EC1F46;
+  border: none;
+  padding: 7px 21px;
+  color: #FFFFFF;
+  border-radius: 4px;
 }
 
 @media (min-width: 1440px) {
