--- a/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
+++ b/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
@@ -6,6 +6,8 @@
 @import "./booking/booking";
 
 .hotel-info {
+    padding-bottom: 70px;
+
     &__wrap {
         display: flex;
         justify-content: space-between;
