--- a/2_hotel-booking/blocks/activities/_activities.scss
+++ b/2_hotel-booking/blocks/activities/_activities.scss
@@ -1,64 +1,71 @@
 .activities {
     padding: 60px 0 98px 0;
 
-    &__title {
-        margin: 0 0 57px 0;
-    }
-
     &__wrap {
         display: flex;
         justify-content: space-between;
     }
 
+    &__title {
+        @include font-mulish(24px, 700, $font-grey, 30px);
+        margin: 0 0 57px;
+    }
+
     &__card {
         position: relative;
         height: 255px;
-        width: 255px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        max-width: 338px;
         border-radius: 6px;
         overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
         padding: 24px 26px;
+        flex-basis: 100%;
 
         &::before {
             content: '';
+            background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
             position: absolute;
             top: 0;
+            bottom: 0;
             left: 0;
             right: 0;
-            bottom: 0;
-            background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
-            width: 100%;
-            height: 100%;
             z-index: -1;
         }
-    }
 
-    &__img {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        object-fit: cover;
-        z-index: -2;
+        &:nth-child(n) {
+            margin-right: 30px;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
 
     &__description {
         @include font-mulish(16px, 700, $light, 20px);
-        margin: auto 0 18px 0;
+        margin: 0 0 18px;
+    }
+
+    &__img {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        z-index: -2;
+        object-fit: cover;
     }
 
     &__btn {
-        bottom: 24px;
-        left: 26px;
         background-color: $red;
-        border: none;
+        border: 0;
         padding: 7px 21px;
-        color: $light;
+        @include font-mulish(12px, 600, $light, 16px);
         border-radius: 4px;
         cursor: pointer;
     }
