--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -2873,10 +2873,6 @@ button.swiper-pagination-bullet {
   padding: 60px 0 98px 0;
 }
 
-.activities__title {
-  margin: 0 0 57px 0;
-}
-
 .activities__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2886,10 +2882,21 @@ button.swiper-pagination-bullet {
           justify-content: space-between;
 }
 
+.activities__title {
+  font-family: "Mulish", serif;
+  font-size: 24px;
+  font-weight: 700;
+  color: #333333;
+  line-height: 30px;
+  margin: 0 0 57px;
+}
+
 .activities__card {
   position: relative;
   height: 255px;
-  width: 255px;
+  max-width: 338px;
+  border-radius: 6px;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2897,38 +2904,34 @@ button.swiper-pagination-bullet {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  border-radius: 6px;
-  overflow: hidden;
   padding: 24px 26px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
 }
 
 .activities__card::before {
   content: '';
+  background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
   position: absolute;
   top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-  background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
-  width: 100%;
-  height: 100%;
   z-index: -1;
 }
 
-.activities__img {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-  z-index: -2;
+.activities__card:nth-child(n) {
+  margin-right: 30px;
+}
+
+.activities__card:last-child {
+  margin-right: 0;
 }
 
 .activities__description {
@@ -2937,16 +2940,31 @@ button.swiper-pagination-bullet {
   font-weight: 700;
   color: #FFFFFF;
   line-height: 20px;
-  margin: auto 0 18px 0;
+  margin: 0 0 18px;
+}
+
+.activities__img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -2;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .activities__btn {
-  bottom: 24px;
-  left: 26px;
   background-color: #EC1F46;
-  border: none;
+  border: 0;
   padding: 7px 21px;
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 600;
   color: #FFFFFF;
+  line-height: 16px;
   border-radius: 4px;
   cursor: pointer;
 }
