--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -2894,7 +2894,7 @@ button.swiper-pagination-bullet {
 .activities__card {
   position: relative;
   height: 255px;
-  max-width: 338px;
+  max-width: 430px;
   border-radius: 6px;
   overflow: hidden;
   display: -webkit-box;
@@ -3038,6 +3038,24 @@ button.swiper-pagination-bullet {
 @media (max-width: 1100px) {
   .container {
     width: 91.14583%;
+  }
+}
+
+@media (max-width: 984px) {
+  .reviews {
+    padding-bottom: 50px;
+    padding-top: 40px;
+  }
+  .activities__wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .activities__card {
+    max-width: 47%;
+    margin-bottom: 20px;
+  }
+  .activities__card:nth-child(even) {
+    margin-right: 0;
   }
 }
 
@@ -3221,6 +3239,25 @@ button.swiper-pagination-bullet {
   .reviews__title {
     font-size: 22px;
     line-height: 22px;
+  }
+}
+
+@media (max-width: 548px) {
+  .reviews {
+    padding-bottom: 50px;
+    padding-bottom: 60px;
+  }
+  .activities {
+    padding-top: 40px;
+  }
+  .activities__title {
+    margin-bottom: 36px;
+  }
+  .activities__card {
+    max-width: 100%;
+  }
+  .activities__card:nth-child(odd) {
+    margin-right: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
