--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -11,6 +11,7 @@ html(lang="en")
         include ./blocks/header/header.pug
         include ./blocks/breadcrumb/breadcrumb.pug
         include ./blocks/hotel-info/hotel-info.pug
+        include ./blocks/packages/packages.pug
         include ./blocks/subscribe/subscribe.pug
         include ./blocks/reviews/reviews.pug
         include ./blocks/activities/activities.pug
